--- a/src/main/resources/templates/updateCompany.html
+++ b/src/main/resources/templates/updateCompany.html
@@ -9,14 +9,14 @@
  
  <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{/create}">Company Management System</a>
+    <a class="navbar-brand" th:href="@{/company/create}">Company Management System</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{/create}">Home</a>
+          <a class="nav-link active" aria-current="page" th:href="@{/company/create}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{list}">List</a>
@@ -34,7 +34,7 @@
  	<h1 th:text="${msg}"></h1>
  	<div class="row">
  		 <div class="col-1">
- 		 	<a class="btn btn-primary" th:href="@{/list}">List Company</a>
+ 		 	<a class="btn btn-primary" th:href="@{/company/list}">List Company</a>
  		 </div>
  		
  		<div class="col-lg-4 col-md-6 col-sm-6 container justyfy-content-center card mt-3">
@@ -42,7 +42,7 @@
  			
  			
  			<div class="card-body"> 
- 				 <form th:action="@{/edit/{id}(id=${user.id})}" th:object=${user} method="POST">
+ 				 <form th:action="@{/company/edit/{id}(id=${user.id})}" th:object=${user} method="POST">
  				 	<div class="form-group">
  				 		<label>Company Name :</label>
  				 		<input type="text"  name="companyName" th:field="*{CompanyName}"  class="form-control" placeholder="Enter Your Company Name" required="required"/>
